{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 43,
  "lineage": "6246a727-d730-8f8c-95d1-ff420aae2dcb",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05024c2628f651b80",
            "arn": "arn:aws:ec2:us-east-1:395063533284:instance/i-0605a9ecff8129cda",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0605a9ecff8129cda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ff1083b293fd253d"
              }
            ],
            "primary_network_interface_id": "eni-0ff1083b293fd253d",
            "private_dns": "ip-10-0-2-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.130",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054a3b5825b2d08a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050ad3087976cfe09",
            "tags": {
              "Name": "moiz-instance-1"
            },
            "tags_all": {
              "Name": "moiz-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029cbe8850ca3ae79"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "i-0605a9ecff8129cda",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.instance_sg",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05024c2628f651b80",
            "arn": "arn:aws:ec2:us-east-1:395063533284:instance/i-0c06584e3b517e2af",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c06584e3b517e2af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0380aa14f98e2fc09"
              }
            ],
            "primary_network_interface_id": "eni-0380aa14f98e2fc09",
            "private_dns": "ip-10-0-3-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.38",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00520e12b2d7d8d57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000d2620a57e98b4e",
            "tags": {
              "Name": "moiz-instance-2"
            },
            "tags_all": {
              "Name": "moiz-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029cbe8850ca3ae79"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "i-0c06584e3b517e2af",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.instance_sg",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b,i-0605a9ecff8129cda,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b",
            "target_id": "i-0605a9ecff8129cda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b",
            "target_id": "i-0605a9ecff8129cda"
          },
          "dependencies": [
            "module.compute.aws_instance.app",
            "module.compute.aws_security_group.instance_sg",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b,i-0c06584e3b517e2af,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b",
            "target_id": "i-0c06584e3b517e2af"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b",
            "target_id": "i-0c06584e3b517e2af"
          },
          "dependencies": [
            "module.compute.aws_instance.app",
            "module.compute.aws_security_group.instance_sg",
            "module.compute.data.aws_ami.amazon_linux_2",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:security-group/sg-029cbe8850ca3ae79",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029cbe8850ca3ae79",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b14cb8d4f0368b0d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "moiz-instance-sg",
            "name_prefix": "",
            "owner_id": "395063533284",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "moiz-instance-sg"
            },
            "tags_all": {
              "Name": "moiz-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "sg-029cbe8850ca3ae79",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:security-group/sg-0e1dda5b74ba8f98b",
            "description": "Allow traffic from compute instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1dda5b74ba8f98b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029cbe8850ca3ae79"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "moiz-rds-sg",
            "name_prefix": "",
            "owner_id": "395063533284",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "moiz-rds-sg"
            },
            "tags_all": {
              "Name": "moiz-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "sg-0e1dda5b74ba8f98b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.instance_sg",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:loadbalancer/app/moiz-alb/607f85000a8f2e5e",
            "arn_suffix": "app/moiz-alb/607f85000a8f2e5e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "moiz-alb-565298247.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:395063533284:loadbalancer/app/moiz-alb/607f85000a8f2e5e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "moiz-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0b14cb8d4f0368b0d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033de4614d040658e"
              },
              {
                "subnet_id": "subnet-0fa9fbba4ad70ee3f"
              }
            ],
            "subnets": [
              "subnet-033de4614d040658e",
              "subnet-0fa9fbba4ad70ee3f"
            ],
            "tags": {
              "Name": "moiz-alb"
            },
            "tags_all": {
              "Name": "moiz-alb"
            },
            "vpc_id": "vpc-0ccffabb0c0732a32",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:loadbalancer/app/moiz-alb/607f85000a8f2e5e"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:listener/app/moiz-alb/607f85000a8f2e5e/c34d22e7a535fcc4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:395063533284:listener/app/moiz-alb/607f85000a8f2e5e/c34d22e7a535fcc4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:loadbalancer/app/moiz-alb/607f85000a8f2e5e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:listener/app/moiz-alb/607f85000a8f2e5e/c34d22e7a535fcc4"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b",
            "arn_suffix": "targetgroup/moiz-tg/ac9ae4acfea3ad8b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:395063533284:loadbalancer/app/moiz-alb/607f85000a8f2e5e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "moiz-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395063533284:targetgroup/moiz-tg/ac9ae4acfea3ad8b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:security-group/sg-0b14cb8d4f0368b0d",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b14cb8d4f0368b0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "moiz-alb-sg",
            "name_prefix": "",
            "owner_id": "395063533284",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "moiz-alb-sg"
            },
            "tags_all": {
              "Name": "moiz-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "sg-0b14cb8d4f0368b0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2b06b9dbb69d32b",
            "arn": "arn:aws:ec2:us-east-1:395063533284:elastic-ip/eipalloc-0a2b06b9dbb69d32b",
            "association_id": "eipassoc-0ed84f12df37809ef",
            "domain": "vpc",
            "id": "eipalloc-0a2b06b9dbb69d32b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0de851c8c8b5bff13",
            "private_dns": "ip-10-0-0-81.ec2.internal",
            "private_ip": "10.0.0.81",
            "public_dns": "ec2-34-236-16-253.compute-1.amazonaws.com",
            "public_ip": "34.236.16.253",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "moiz-eip"
            },
            "tags_all": {
              "Name": "moiz-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:internet-gateway/igw-0a76479aeab46266b",
            "id": "igw-0a76479aeab46266b",
            "owner_id": "395063533284",
            "region": "us-east-1",
            "tags": {
              "Name": "moiz-igw"
            },
            "tags_all": {
              "Name": "moiz-igw"
            },
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2b06b9dbb69d32b",
            "association_id": "eipassoc-0ed84f12df37809ef",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b9989acb4743cc0c",
            "network_interface_id": "eni-0de851c8c8b5bff13",
            "private_ip": "10.0.0.81",
            "public_ip": "34.236.16.253",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033de4614d040658e",
            "tags": {
              "Name": "moiz-nat"
            },
            "tags_all": {
              "Name": "moiz-nat"
            },
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07d6c6ebbefd74e241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b9989acb4743cc0c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07d6c6ebbefd74e24",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-07d6c6ebbefd74e24"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a76479aeab46266b",
            "id": "r-rtb-0f18c6cc2d89489d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f18c6cc2d89489d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f18c6cc2d89489d7"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:route-table/rtb-07d6c6ebbefd74e24",
            "id": "rtb-07d6c6ebbefd74e24",
            "owner_id": "395063533284",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9989acb4743cc0c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "moiz-private-rt"
            },
            "tags_all": {
              "Name": "moiz-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "rtb-07d6c6ebbefd74e24",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:route-table/rtb-0f18c6cc2d89489d7",
            "id": "rtb-0f18c6cc2d89489d7",
            "owner_id": "395063533284",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a76479aeab46266b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "moiz-public-rt"
            },
            "tags_all": {
              "Name": "moiz-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "rtb-0f18c6cc2d89489d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b97a8e5fae410aa",
            "region": "us-east-1",
            "route_table_id": "rtb-07d6c6ebbefd74e24",
            "subnet_id": "subnet-050ad3087976cfe09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0660d00b289462d9a",
            "region": "us-east-1",
            "route_table_id": "rtb-07d6c6ebbefd74e24",
            "subnet_id": "subnet-000d2620a57e98b4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c83434b0f671df1f",
            "region": "us-east-1",
            "route_table_id": "rtb-0f18c6cc2d89489d7",
            "subnet_id": "subnet-033de4614d040658e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9c9c562a9ce4f7",
            "region": "us-east-1",
            "route_table_id": "rtb-0f18c6cc2d89489d7",
            "subnet_id": "subnet-0fa9fbba4ad70ee3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:subnet/subnet-050ad3087976cfe09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050ad3087976cfe09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395063533284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moiz-private-subnet-0"
            },
            "tags_all": {
              "Name": "moiz-private-subnet-0"
            },
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "subnet-050ad3087976cfe09",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:subnet/subnet-000d2620a57e98b4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d2620a57e98b4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395063533284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moiz-private-subnet-1"
            },
            "tags_all": {
              "Name": "moiz-private-subnet-1"
            },
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "subnet-000d2620a57e98b4e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:subnet/subnet-033de4614d040658e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033de4614d040658e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "395063533284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moiz-public-subnet-0"
            },
            "tags_all": {
              "Name": "moiz-public-subnet-0"
            },
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "subnet-033de4614d040658e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:subnet/subnet-0fa9fbba4ad70ee3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa9fbba4ad70ee3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "395063533284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "moiz-public-subnet-1"
            },
            "tags_all": {
              "Name": "moiz-public-subnet-1"
            },
            "vpc_id": "vpc-0ccffabb0c0732a32"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "subnet-0fa9fbba4ad70ee3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395063533284:vpc/vpc-0ccffabb0c0732a32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d67823e799d40dbe",
            "default_route_table_id": "rtb-0695ed9c5781d66dd",
            "default_security_group_id": "sg-044256ced49c24a97",
            "dhcp_options_id": "dopt-098851a4b8e1a0b5c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccffabb0c0732a32",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0695ed9c5781d66dd",
            "owner_id": "395063533284",
            "region": "us-east-1",
            "tags": {
              "Name": "moiz-vpc"
            },
            "tags_all": {
              "Name": "moiz-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "395063533284",
            "id": "vpc-0ccffabb0c0732a32",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}